[package]
name = "bool-cli"
version = "0.6.0"
authors = ["BOOL Network"]
build = "build.rs"
edition = "2018"
default-run = "Bool"
homepage = "https://bool.network"
repository = "https://github.com/boolnetwork/Bool"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[badges]
travis-ci = { repository = "paritytech/substrate", branch = "master" }
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "paritytech/substrate" }
is-it-maintained-open-issues = { repository = "paritytech/substrate" }

[[bin]]
name = "Bool"
path = "bin/main.rs"
required-features = ["cli"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "1.3.4" }
serde = { version = "1.0.102", features = ["derive"] }
futures = { version = "0.3.1", features = ["compat"] }
hex-literal = "0.3.1"
log = "0.4.8"
rand = "0.7.2"
structopt = { version = "0.3.8", optional = true }
tracing = "0.1.19"
parking_lot = "0.10.0"
rustc-hex = "2.0"

# primitives
sp-authority-discovery = { version = "2.0.0" }
sp-consensus-babe = { version = "0.8.0" }
grandpa-primitives = { version = "2.0.0", package = "sp-finality-grandpa" }
sp-core = { version = "2.0.0" }
sp-runtime = { version = "2.0.0" }
sp-timestamp = { version = "2.0.0", default-features = false }
#sp-finality-tracker = { version = "2.0.0", default-features = false }
sp-inherents = { version = "2.0.0" }
sp-keyring = { version = "2.0.0" }
sp-io = { version = "2.0.0" }
sp-consensus = { version = "0.8.0" }

# client dependencies
sc-client-api = { version = "2.0.0" }
sc-chain-spec = { version = "2.0.0" }
sc-transaction-pool = { version = "2.0.0" }
sp-transaction-pool = { version = "2.0.0" }
sc-network = { version = "0.8.0" }
sc-consensus-babe = { version = "0.8.0" }
grandpa = { version = "0.8.0", package = "sc-finality-grandpa" }
sc-client-db = { version = "0.8.0", default-features = false }
sc-offchain = { version = "2.0.0" }
sc-rpc = { version = "2.0.0" }
sc-basic-authorship = { version = "0.8.0" }
sc-service = { version = "0.8.0", default-features = false }
sc-tracing = { version = "2.0.0" }
sc-telemetry = { version = "2.0.0" }
sc-authority-discovery = { version = "0.8.0" }
sc-consensus = { version = "0.8.0" }
sc-executor = { version = "0.8.0" }
#threshold = { version = "0.0.1", path = "../threshold" }
frame-benchmarking = { version = "2.0.0" }

# frame dependencies
pallet-indices = { version = "2.0.0" }
pallet-timestamp = { version = "2.0.0", default-features = false }
pallet-contracts = { version = "2.0.0" }
frame-system = { version = "2.0.0" }
pallet-balances = { version = "2.0.0" }
pallet-transaction-payment = { version = "2.0.0" }
frame-support = { version = "2.0.0", default-features = false }
pallet-im-online = { version = "2.0.0", default-features = false }
pallet-authority-discovery = { version = "2.0.0" }

# node-specific dependencies
bool-runtime = { path = "../runtime" }
bool-rpc = { path = "../rpc" }
bool-primitives = { path = "../primitives" }

# CLI-specific dependencies
sc-cli = { version = "0.8.0", optional = true }
frame-benchmarking-cli = { version = "2.0.0", optional = true }

# WASM-specific dependencies
wasm-bindgen = { version = "0.2.57", optional = true }
wasm-bindgen-futures = { version = "0.4.7", optional = true }
browser-utils = { package = "substrate-browser-utils",  optional = true, version = "0.8.0" }

[build-dependencies]
substrate-build-script-utils = { version = "2.0.0", optional = true }
structopt = { version = "0.3.8", optional = true }
frame-benchmarking-cli = { version = "2.0.0", optional = true }
sc-cli = { version = "0.8.0", optional = true }
vergen = { version = "3.0.4", optional = true }

[features]
default = ["cli", "wasmtime"]
cli = [
	"sc-cli",
	"frame-benchmarking-cli",
	"sc-service/db",
	"structopt",
	"vergen",
	"substrate-build-script-utils",
]
wasmtime = [
	"cli",
	"sc-cli/wasmtime",
	"sc-service/wasmtime",
]