[package]
name = "pallet-tss"
version = "0.1.0"
authors = ["Turntogamer <574658087a@gmail.com>"]
edition = "2018"
homepage = "https://bool.network"
repository = "https://github.com/boolnetwork/Bool"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"]}
codec = { package = "parity-scale-codec", version = "1.2.0", default-features = false, features = ["derive"] }
frame-support = { version = "2.0.0", default-features = false }
frame-system = { version = "2.0.0", default-features = false }
sp-std = { version = "2.0.0", default-features = false }
sp-runtime = { version = "2.0.0", default-features = false }
pallet-timestamp = { version = "2.0.0", default-features = false }


[dev-dependencies]
sp-core = { version = "2.0.0" }
lazy_static = { version = "1.3"}

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-timestamp/std",
]