[package]
name = "bool-primitives"
version = "0.6.0"
authors = ["BOOL Network"]
edition = "2018"
homepage = "https://bool.network"
repository = "https://github.com/boolnetwork/Bool"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
frame-system = { version = "2.0.0", default-features = false }
sp-application-crypto = { version = "2.0.0", default-features = false }
sp-core = { version = "2.0.0", default-features = false }
sp-runtime = { version = "2.0.0", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-system/std",
	"sp-application-crypto/std",
	"sp-core/std",
	"sp-runtime/std",
]
