[package]
name = "bool-runtime"
version = "0.6.0"
authors = ["BOOL Network"]
edition = "2018"
build = "build.rs"
homepage = "https://bool.network"
repository = "https://github.com/boolnetwork/Bool"

[dependencies]

# third-party dependencies
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
integer-sqrt = { version = "0.1.2" }
rustc-hex = { version = "2.0", optional = true }
serde = { version = "1.0.102", optional = true }
smallvec = "1.4.2"
static_assertions = "1.1.0"

# primitives
bool-primitives = { default-features = false, path = "../primitives" }
sp-authority-discovery = { version = "2.0.0", default-features = false }
sp-consensus-babe = { version = "0.8.0", default-features = false }
sp-block-builder = { version = "2.0.0", default-features = false }
sp-inherents = { version = "2.0.0", default-features = false }
sp-offchain = { version = "2.0.0", default-features = false }
sp-core = { version = "2.0.0", default-features = false }
sp-std = { version = "2.0.0", default-features = false }
sp-api = { version = "2.0.0", default-features = false }
sp-runtime = { version = "2.0.0", default-features = false }
sp-staking = { version = "2.0.0", default-features = false }
sp-keyring = { version = "2.0.0", optional = true }
sp-session = { version = "2.0.0", default-features = false }
sp-transaction-pool = { version = "2.0.0", default-features = false }
sp-version = { version = "2.0.0", default-features = false }

# frame dependencies
frame-executive = { version = "2.0.0", default-features = false }
frame-benchmarking = { version = "2.0.0", default-features = false,  optional = true }
frame-support = { version = "2.0.0", default-features = false }
frame-system = { version = "2.0.0", default-features = false }
frame-system-rpc-runtime-api = { version = "2.0.0", default-features = false }
pallet-authority-discovery = { version = "2.0.0", default-features = false }
pallet-authorship = { version = "2.0.0", default-features = false }
pallet-babe = { version = "2.0.0", default-features = false }
pallet-balances = { version = "2.0.0", default-features = false }
pallet-collective = { version = "2.0.0", default-features = false }
pallet-democracy = { version = "2.0.0", default-features = false }
pallet-elections-phragmen = { version = "2.0.0", default-features = false }
pallet-finality-tracker = { version = "2.0.0", default-features = false }
pallet-grandpa = { version = "2.0.0", default-features = false }
pallet-im-online = { version = "2.0.0", default-features = false }
pallet-indices = { version = "2.0.0", default-features = false }
pallet-identity = { version = "2.0.0", default-features = false }
pallet-membership = { version = "2.0.0", default-features = false }
pallet-offences = { version = "2.0.0", default-features = false }
pallet-randomness-collective-flip = { version = "2.0.0", default-features = false }
pallet-session = { version = "2.0.0", features = ["historical"],  default-features = false }
pallet-sudo = { version = "2.0.0", default-features = false }
pallet-timestamp = { version = "2.0.0", default-features = false }
pallet-utility = { version = "2.0.0", default-features = false }
pallet-transaction-payment = { version = "2.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "2.0.0", default-features = false }
pallet-scheduler = { version = "2.0.0", default-features = false }
pallet-staking = { version = "2.0.0", default-features = false }
pallet-staking-reward-curve = { version = "2.0.0", default-features = false }
pallet-thresh = { default-features = false, path = "../pallets/thresh"}

# custom pallets

[build-dependencies]
wasm-builder-runner = { version = "1.0.5", package = "substrate-wasm-builder-runner" }

[dev-dependencies]
sp-io = { version = "2.0.0" }

[features]
default = ["std"]
std = [
	"sp-authority-discovery/std",
	"pallet-authority-discovery/std",
	"pallet-authorship/std",
	"sp-consensus-babe/std",
	"pallet-babe/std",
	"pallet-balances/std",
	"sp-block-builder/std",
	"codec/std",
	"pallet-collective/std",
	"pallet-democracy/std",
	"pallet-elections-phragmen/std",
	"frame-executive/std",
	"pallet-finality-tracker/std",
	"pallet-grandpa/std",
	"pallet-im-online/std",
	"pallet-indices/std",
	"sp-inherents/std",
	"pallet-membership/std",
	"pallet-identity/std",
	"pallet-scheduler/std",
	"bool-primitives/std",
	"sp-offchain/std",
	"pallet-offences/std",
	"sp-core/std",
	"pallet-randomness-collective-flip/std",
	"sp-std/std",
	"rustc-hex",
	"serde",
	"pallet-session/std",
	"sp-api/std",
	"sp-runtime/std",
	"sp-staking/std",
	"pallet-staking/std",
	"sp-keyring",
	"sp-session/std",
	"pallet-sudo/std",
	"frame-support/std",
	"frame-benchmarking/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"sp-transaction-pool/std",
	"pallet-utility/std",
	"sp-version/std",
	"pallet-thresh/std",
]