[package]
name = "threshold"
version = "0.0.1"
authors = ["Turntogamer <574658087a@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.4"
log = "0.4.8"
parking_lot = "0.10.0"
async-std = "1.7.0"
libsecp256k1 = "0.3.2"
rust-crypto = "0.2"
hex = "0.4"
reqwest = { version = "0.9", default-features = false }
serde = { version = "1.0", features = ["derive"] }
parity-scale-codec = { version = "1.3.4", features = ["derive"] }
sp-application-crypto = { version = "2.0.0" }
sp-arithmetic = { version = "2.0.0" }
sp-runtime = { version = "2.0.0" }
sp-utils = { version = "2.0.0" }
sp-core = { version = "2.0.0" }
sp-api = { version = "2.0.0" }
sp-transaction-pool = { version = "2.0.0" }
sc-keystore = { version = "2.0.0" }
serde_json = "1.0.48"
sc-client-api = { version = "2.0.0" }
sp-blockchain = { version = "2.0.0" }
sp-block-builder = { version = "2.0.0" }
sc-network = { version = "0.8.0" }
sc-network-gossip = { version = "0.8.0" }
sc-block-builder = { version = "0.8.0" }
bool-runtime = { version = "0.6.0", path = "../runtime" }
bool-primitives = { version = "0.6.0", path = "../primitives" }
pallet-tss = { version = "0.1.0", default-features = false, path = "../pallet-tss"}
frame-system = { version = "2.0.0" }
multi-party-ecdsa = { version = "0.4.3", git = "https://github.com/boolnetwork/multi-party-ecdsa-p2p.git" }
paillier = { git = "https://github.com/KZen-networks/rust-paillier", tag = "v0.3.4" }
zk-paillier = { git = "https://github.com/KZen-networks/zk-paillier", tag = "v0.2.9" }

[dependencies.curv]
git = "https://github.com/KZen-networks/curv"
tag = "v0.2.6"
features = ["ec_secp256k1"]

[dev-dependencies]
serde_json = "1.0.48"
sp-keyring = { version = "2.0.0" }
sp-state-machine = { version = "0.8.0" }
sp-tracing = { version = "2.0.0" }
sp-api = { version = "2.0.0" }
