[package]
name = 'pallet-thresh'
version = '0.6.0'
authors = ["BOOL Network"]
edition = "2018"


[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
frame-support = { version = "2.0.0", default-features = false }
frame-system = { version = "2.0.0", default-features = false }
sp-runtime = { version = "2.0.0", default-features = false }

[dev-dependencies]
sp-io = { version = "2.0.0" }
sp-core = { version = "2.0.0" }
pallet-balances = { version = "2.0.0" }

[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    'sp-runtime/std',
    'frame-support/std',
    'frame-system/std',
]
